菜单添加api
