# gvb-server/api/images_api/images_list.go
@@ -7,6 +7,14 @@ import (
 	"time1043/gvb-server/service/common"
 )
 
+// ImageListView 图片列表
+// @Tags 图片管理
+// @Summary 图片列表
+// @Description 图片列表
+// @Param data query models.PageInfo false "查询参数"
+// @Router /api/images [get]
+// @Produce json
+// @Success 200 {object} res.Response{data=res.ListResponse[models.BannerModel]}
 func (ImagesApi) ImageListView(ctx *gin.Context) {
 	var cr models.PageInfo
 	err := ctx.ShouldBindQuery(&cr)
